--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "luxon": "^3.3.0",
     "redis": "^4.6.7",
     "ts-node": "^10.9.1",
+    "twilio": "^5.3.6",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
